--- a/ManualLaboratory/Views/Requests/Create.cshtml
+++ b/ManualLaboratory/Views/Requests/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ManualLaboratory.Models.Request
+﻿@model ManualLaboratory.Models.VMCollege
 
 @{
     ViewData["Title"] = "Create";
@@ -39,32 +39,36 @@
                 <div class="col">
                     <div asp-validation-summary="ModelOnly" class="text-danger"></div>
                     <div class="form-group">
-                        <label asp-for="NationalId" class="control-label text-info"></label>
-                        <input asp-for="NationalId" class="form-control" />
-                        <span asp-validation-for="NationalId" class="text-danger"></span>
+                        <label asp-for="request.NationalId" class="control-label text-info"></label>
+                        <input asp-for="request.NationalId" class="form-control" />
+                        <span asp-validation-for="request.NationalId" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="UniversityNo" class="control-label text-info"></label>
-                        <input asp-for="UniversityNo" class="form-control" />
-                        <span asp-validation-for="UniversityNo" class="text-danger"></span>
+                        <label asp-for="request.UniversityNo" class="control-label text-info"></label>
+                        <input asp-for="request.UniversityNo" class="form-control" />
+                        <span asp-validation-for="request.UniversityNo" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="StudentStatus" class="control-label text-info"></label>
-                        <select asp-for="StudentStatus" class="form-select">
-                            <option>Student Status</option>
+                        <label asp-for="request.StudentStatus" class="control-label text-info"></label>
+                        <select asp-for="request.StudentStatus" class="form-select">
+                            <option></option>
                             <option value="New Student">New Student</option>
                             <option value="Intern">Intern</option>
                         </select>
-                        <span asp-validation-for="StudentStatus" class="text-danger"></span>
+                        <span asp-validation-for="request.StudentStatus" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="College" class="control-label text-info"></label>
+                        <label asp-for="request.College" class="control-label"></label>
+                        <select asp-for="request.College" asp-items="Model.CollegesSelectList">
+                            
+                        </select>
+                       @* <label asp-for="College" class="control-label text-info"></label>
                         <select asp-for="College" class="form-select">
                             <option>College</option>
                             <option>الطب البشري(المقر الرئيسي)</option>
@@ -79,69 +83,69 @@
                             <option>العلوم الصحية</option>
                             <option>الصحة العامة والمعلوماتية</option>
                             <option>كلية الزراعة</option>
-                        </select>
+                        </select>*@
                         <!-- <input asp-for="College" class="form-control" /> -->
-                        <span asp-validation-for="College" class="text-danger"></span>
+                        <span asp-validation-for="request.College" class="text-danger"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="FirstNameEn" class="control-label text-info"></label>
-                        <input asp-for="FirstNameEn" class="form-control" />
-                        <span asp-validation-for="FirstNameEn" class="text-danger"></span>
+                        <label asp-for="request.FirstNameEn" class="control-label text-info"></label>
+                        <input asp-for="request.FirstNameEn" class="form-control" />
+                        <span asp-validation-for="request.FirstNameEn" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="FatherNameEn" class="control-label text-info"></label>
-                        <input asp-for="FatherNameEn" class="form-control" />
-                        <span asp-validation-for="FatherNameEn" class="text-danger"></span>
+                        <label asp-for="request.FatherNameEn" class="control-label text-info"></label>
+                        <input asp-for="request.FatherNameEn" class="form-control" />
+                        <span asp-validation-for="request.FatherNameEn" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="GrandfatherNameEn" class="control-label text-info"></label>
-                        <input asp-for="GrandfatherNameEn" class="form-control" />
-                        <span asp-validation-for="GrandfatherNameEn" class="text-danger"></span>
+                        <label asp-for="request.GrandfatherNameEn" class="control-label text-info"></label>
+                        <input asp-for="request.GrandfatherNameEn" class="form-control" />
+                        <span asp-validation-for="request.GrandfatherNameEn" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="FamilyNameEn" class="control-label text-info"></label>
-                        <input asp-for="FamilyNameEn" class="form-control" />
-                        <span asp-validation-for="FamilyNameEn" class="text-danger"></span>
+                        <label asp-for="request.FamilyNameEn" class="control-label text-info"></label>
+                        <input asp-for="request.FamilyNameEn" class="form-control" />
+                        <span asp-validation-for="request.FamilyNameEn" class="text-danger"></span>
                     </div>
                 </div>
             </div>
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="FirstNameAr" class="control-label text-info"></label>
-                        <input asp-for="FirstNameAr" class="form-control" />
-                        <span asp-validation-for="FirstNameAr" class="text-danger"></span>
+                        <label asp-for="request.FirstNameAr" class="control-label text-info"></label>
+                        <input asp-for="request.FirstNameAr" class="form-control" />
+                        <span asp-validation-for="request.FirstNameAr" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="FatherNameAr" class="control-label text-info"></label>
-                        <input asp-for="FatherNameAr" class="form-control" />
-                        <span asp-validation-for="FatherNameAr" class="text-danger"></span>
+                        <label asp-for="request.FatherNameAr" class="control-label text-info"></label>
+                        <input asp-for="request.FatherNameAr" class="form-control" />
+                        <span asp-validation-for="request.FatherNameAr" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="GrandfatherNameAr" class="control-label text-info"></label>
-                        <input asp-for="GrandfatherNameAr" class="form-control" />
-                        <span asp-validation-for="GrandfatherNameAr" class="text-danger"></span>
+                        <label asp-for="request.GrandfatherNameAr" class="control-label text-info"></label>
+                        <input asp-for="request.GrandfatherNameAr" class="form-control" />
+                        <span asp-validation-for="request.GrandfatherNameAr" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="FamilyNameAr" class="control-label text-info"></label>
-                        <input asp-for="FamilyNameAr" class="form-control" />
-                        <span asp-validation-for="FamilyNameAr" class="text-danger"></span>
+                        <label asp-for="request.FamilyNameAr" class="control-label text-info"></label>
+                        <input asp-for="request.FamilyNameAr" class="form-control" />
+                        <span asp-validation-for="request.FamilyNameAr" class="text-danger"></span>
                     </div>
                 </div>
 
@@ -150,30 +154,30 @@
             <div class="row">
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="Email" class="control-label text-info"></label>
-                        <input asp-for="Email" class="form-control" />
-                        <span asp-validation-for="Email" class="text-danger"></span>
+                        <label asp-for="request.Email" class="control-label text-info"></label>
+                        <input asp-for="request.Email" class="form-control" />
+                        <span asp-validation-for="request.Email" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="PhoneNo" class="control-label text-info"></label>
-                        <input asp-for="PhoneNo" class="form-control" placeholder="05********" />
-                        <span asp-validation-for="PhoneNo" class="text-danger"></span>
+                        <label asp-for="request.PhoneNo" class="control-label text-info"></label>
+                        <input asp-for="request.PhoneNo" class="form-control" placeholder="05********" />
+                        <span asp-validation-for="request.PhoneNo" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="BirthDate" class="control-label text-info"></label>
-                        <input asp-for="BirthDate" type="date" class="form-control" />
-                        <span asp-validation-for="BirthDate" class="text-danger"></span>
+                        <label asp-for="request.BirthDate" class="control-label text-info"></label>
+                        <input asp-for="request.BirthDate" type="date" class="form-control" />
+                        <span asp-validation-for="request.BirthDate" class="text-danger"></span>
                     </div>
                 </div>
                 <div class="col">
                     <div class="form-group">
-                        <label asp-for="MidecalfileNo" class="control-label text-info"></label>
-                        <input asp-for="MidecalfileNo" class="form-control" />
-                        <span asp-validation-for="MidecalfileNo" class="text-danger"></span>
+                        <label asp-for="request.MidecalfileNo" class="control-label text-info"></label>
+                        <input asp-for="request.MidecalfileNo" class="form-control" />
+                        <span asp-validation-for="request.MidecalfileNo" class="text-danger"></span>
                     </div>
                 </div>
             </div>
@@ -197,7 +201,7 @@
                         @*<label asp-for="DateSelected" class="control-label text-info"></label>
                         <input asp-for="DateSelected" type="date" class="form-control" />
                         <span asp-validation-for="DateSelected" class="text-danger"></span>*@
-                        <select class="form-control" name="DateSelected">
+                        <select asp-for="request.DateSelected" class=" form-control">
                             @if (ViewBag.AvalibleDates is not null)
                             {
                                 var avalibleDates = (List<DateTime>)ViewBag.AvalibleDates;
